# AM4CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generateCPP.sh
src-gen/: CMakeLists.txt  amalthea.cmake  amalthea.cpp  amalthea.hpp  amalthea_forward.hpp
src-gen/amalthea/: ASILType.hpp  AbstractElementMappingConstraint.cpp  AbstractElementMappingConstraint.hpp  AbstractElementMappingConstraintImpl.cpp  AbstractEventChain.cpp  AbstractEventChain.hpp  AbstractEventChainImpl.cpp  AbstractMemoryElement.cpp  AbstractMemoryElement.hpp  AbstractMemoryElementImpl.cpp  AbstractProcess.cpp  AbstractProcess.hpp  AbstractProcessImpl.cpp  AccessMultiplicity.hpp  AccessPrecedenceSpec.cpp  AccessPrecedenceSpec.hpp  AccessPrecedenceSpecImpl.cpp  AccessPrecedenceType.hpp  Activation.cpp  Activation.hpp  ActivationImpl.cpp  ActivityGraph.cpp  ActivityGraph.hpp  ActivityGraphImpl.cpp  ActivityGraphItem.cpp  ActivityGraphItem.hpp  ActivityGraphItemImpl.cpp  AffinityConstraint.cpp  AffinityConstraint.hpp  AffinityConstraintImpl.cpp  Algorithm.cpp  Algorithm.hpp  AlgorithmImpl.cpp  Alias.cpp  Alias.hpp  AliasImpl.cpp  Amalthea.cpp  Amalthea.hpp  AmaltheaFactory.cpp  AmaltheaFactory.hpp  (+1144 more)
src-gen/cmake/: AM4CPPConfig.cmake.in  AMALTHEAConfig.cmake.in  CMakeLists.txt
tests/: CMakeLists.txt
tests/load-model/: CMakeLists.txt  model.amxmi  test.cpp
